[gd_scene load_steps=13 format=3 uid="uid://c2sg1i523d8qr"]

[ext_resource type="Script" path="res://ui/combat/subscenes/status_panel.gd" id="1_j1sxw"]
[ext_resource type="PackedScene" uid="uid://taiib681wkvl" path="res://ui/subscenes/progress_bar.tscn" id="1_xjmis"]
[ext_resource type="Texture2D" uid="uid://cok6af1uuonbi" path="res://ui/hud/assets/under_progressbar.svg" id="2_8xvg5"]
[ext_resource type="Texture2D" uid="uid://c5wvjsj1orm8c" path="res://ui/hud/assets/health_progressbar.svg" id="3_e2ruq"]
[ext_resource type="Texture2D" uid="uid://bmoaj2p4qjjmv" path="res://ui/combat/assets/stance_token_white.svg" id="5_jtm7m"]
[ext_resource type="FontFile" uid="uid://cjg2va2gx341j" path="res://assets/fonts/nippo/OTF/Nippo-Regular.otf" id="5_yc3nm"]
[ext_resource type="Texture2D" uid="uid://druqr4cv3o1v6" path="res://ui/combat/assets/stance_token_blue.svg" id="6_xt8jj"]
[ext_resource type="Texture2D" uid="uid://s0a53et15ukx" path="res://ui/hud/assets/white_blood.svg" id="7_vdodb"]
[ext_resource type="Texture2D" uid="uid://rwuw0vie61sr" path="res://ui/hud/assets/white_flask.svg" id="8_q4f1g"]
[ext_resource type="Texture2D" uid="uid://bwf8rc7n22rne" path="res://ui/hud/assets/white_syringe.svg" id="9_gkou8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mg6ih"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_reevf"]
color = Color(0.254902, 0.254902, 0.254902, 1)

[node name="StatusPanel" type="Control"]
custom_minimum_size = Vector2(465, 178)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j1sxw")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(465, 178)
layout_mode = 0
offset_right = 465.0
offset_bottom = 178.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mg6ih")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="RowsVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HealthBar" parent="PanelContainer/MarginContainer/RowsVBox" instance=ExtResource("1_xjmis")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
texture_under = ExtResource("2_8xvg5")
texture_progress = ExtResource("3_e2ruq")
nine_patch_margins = Vector4(0, 0, 425, 7)
margin_bottom = 0
font_size = 24

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/RowsVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="StanceLabel" type="Label" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_yc3nm")
theme_override_font_sizes/font_size = 20
text = "Kampfhaltung: St√§rke"

[node name="ThirdRowHBoxStatusEffects" type="HBoxContainer" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 2

[node name="Token3" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer/ThirdRowHBoxStatusEffects"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_jtm7m")

[node name="Token2" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer/ThirdRowHBoxStatusEffects"]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_xt8jj")

[node name="Token1" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer/ThirdRowHBoxStatusEffects"]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_xt8jj")

[node name="Seperator" type="HSeparator" parent="PanelContainer/MarginContainer/RowsVBox"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxLine_reevf")

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/RowsVBox"]
layout_mode = 2
theme_override_constants/separation = 37

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer2"]
custom_minimum_size = Vector2(97, 26)
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 10

[node name="BleedTexture" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("7_vdodb")

[node name="BleedLabel" type="Label" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.262745, 0.27451, 1)
theme_override_fonts/font = ExtResource("5_yc3nm")
theme_override_font_sizes/font_size = 20
text = "blutend"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer2"]
custom_minimum_size = Vector2(106, 26)
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 10

[node name="PoisonTexture" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("8_q4f1g")

[node name="PoisonLabel" type="Label" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.262745, 0.27451, 1)
theme_override_fonts/font = ExtResource("5_yc3nm")
theme_override_font_sizes/font_size = 20
text = "vergiftet"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer2"]
custom_minimum_size = Vector2(147, 26)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 10

[node name="DrugTexture" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_gkou8")

[node name="DrugLabel" type="Label" parent="PanelContainer/MarginContainer/RowsVBox/HBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.262745, 0.27451, 1)
theme_override_fonts/font = ExtResource("5_yc3nm")
theme_override_font_sizes/font_size = 20
text = "unter Drogen"
